--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
         </section>
 
-    <!--<section class="section-foret">
+    <section class="section-foret">
         <div class="row">
                 <div class="container-2">
         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam aperiam.</p>
@@ -91,7 +91,7 @@
                     <h1>Our<span class="text-ligt">Team</span> </h1>
                     </div>
             </div>
-        </section>!-->
+        </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
         <script src="//cdn.jsdelivr.net/html5shiv/3.7.3/html5shiv.min.js"></script>
